--- a/package.json
+++ b/package.json
@@ -11,16 +11,15 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.7",
+    "chart.js": "^4.4.2",
     "framer-motion": "^10.18.0",
-    "chart.js": "^4.4.2",
-    "chart.js": "^4.4.2",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
-    "react-chartjs-2": "^5.2.0",
-    "react-chartjs-2": "^5.2.0",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.22.3",
+    "react-signature-canvas": "^1.1.0-alpha.1",
     "sweetalert2": "^11.17.2"
   },
   "devDependencies": {
